# pm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: cli.rs  error.rs  main.rs
src/commands/: completions.rs  create.rs  delete.rs  edit.rs  init.rs  list.rs  mod.rs  navigate.rs  search.rs  status.rs  update.rs
src/config/: loader.rs  mod.rs  paths.rs  schema.rs
src/git/: clone.rs  mod.rs  status.rs  update.rs
src/models/: mod.rs  project.rs
src/output/: formatter.rs  json.rs  mod.rs  table.rs  yaml.rs
