[package]
name = "pm"
version = "0.1.0"
edition = "2021"
authors = ["Chris"]
description = "A project manager CLI for organizing development projects"
license = "MIT"
repository = "https://github.com/zengineChris/pm"
keywords = ["cli", "project-manager", "git", "development"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pm"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"

# Git operations
git2 = "0.18"

# Table formatting
tabled = "0.15"

# File system
dirs = "5.0"
walkdir = "2.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
colored = "2.1"
dialoguer = "0.11"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
